--- a/Missions_to_Mars/mission_to_mars.ipynb
+++ b/Missions_to_Mars/mission_to_mars.ipynb
@@ -47,7 +47,7 @@
     "# With Chrome now open, browser navs and opens URL listed\n",
     "url = 'https://mars.nasa.gov/news/?page=0&per_page=40&order=publish_date+desc%2Ccreated_at+desc&search=&category=19%2C165%2C184%2C204&blank_scope=Latest'\n",
     "browser.visit(url)\n",
-    "time.sleep(10)\n",
+    "time.sleep(7)\n",
     "# Boilerplate\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')"
@@ -99,7 +99,7 @@
     "# Boilerplate scrape setup\n",
     "url = 'https://www.jpl.nasa.gov/spaceimages/?search=&category=Mars'\n",
     "browser.visit(url)\n",
-    "time.sleep(10)\n",
+    "time.sleep(7)\n",
     "html = browser.html\n",
     "url_soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
@@ -133,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA18907_hires.jpg'"
+       "'https://www.jpl.nasa.gov/spaceimages/images/largesize/PIA17564_hires.jpg'"
       ]
      },
      "execution_count": 7,
@@ -332,7 +332,8 @@
    "outputs": [],
    "source": [
     "# Remove Earth column\n",
-    "del mars_df['Earth']"
+    "del mars_df['Earth']\n",
+    "mars_df = pd.DataFrame(mars_df)"
    ]
   },
   {
@@ -343,7 +344,14 @@
     {
      "data": {
       "text/plain": [
-       "'<table border=\"1\" class=\"dataframe\">\\n  <thead>\\n    <tr style=\"text-align: right;\">\\n      <th></th>\\n      <th>Mars</th>\\n    </tr>\\n    <tr>\\n      <th>Mars - Earth Comparison</th>\\n      <th></th>\\n    </tr>\\n  </thead>\\n  <tbody>\\n    <tr>\\n      <th>Diameter:</th>\\n      <td>6,779 km</td>\\n    </tr>\\n    <tr>\\n      <th>Mass:</th>\\n      <td>6.39 × 10^23 kg</td>\\n    </tr>\\n    <tr>\\n      <th>Moons:</th>\\n      <td>2</td>\\n    </tr>\\n    <tr>\\n      <th>Distance from Sun:</th>\\n      <td>227,943,824 km</td>\\n    </tr>\\n    <tr>\\n      <th>Length of Year:</th>\\n      <td>687 Earth days</td>\\n    </tr>\\n    <tr>\\n      <th>Temperature:</th>\\n      <td>-87 to -5 °C</td>\\n    </tr>\\n  </tbody>\\n</table>'"
+       "<bound method DataFrame.to_html of                                     Mars\n",
+       "Mars - Earth Comparison                 \n",
+       "Diameter:                       6,779 km\n",
+       "Mass:                    6.39 × 10^23 kg\n",
+       "Moons:                                 2\n",
+       "Distance from Sun:        227,943,824 km\n",
+       "Length of Year:           687 Earth days\n",
+       "Temperature:                -87 to -5 °C>"
       ]
      },
      "execution_count": 13,
@@ -353,7 +361,7 @@
    ],
    "source": [
     "# Use Pandas to convert the data to a HTML table string.\n",
-    "html_table = mars_df.to_html()\n",
+    "html_table = mars_df.to_html\n",
     "html_table"
    ]
   },
@@ -389,24 +397,27 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[<div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\"><img alt=\"Cerberus Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/39d3266553462198bd2fbc4d18fbed17_cerberus_enhanced.tif_thumb.png\"/></a><div class=\"description\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/cerberus_enhanced\"><h3>Cerberus Hemisphere Enhanced</h3></a><span class=\"subtitle\" style=\"float:left\">image/tiff 21 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Cerberus hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of 104 Viking Orbiter images acquired…</p></div> <!-- end description --></div>, <div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/schiaparelli_enhanced\"><img alt=\"Schiaparelli Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/08eac6e22c07fb1fe72223a79252de20_schiaparelli_enhanced.tif_thumb.png\"/></a><div class=\"description\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/schiaparelli_enhanced\"><h3>Schiaparelli Hemisphere Enhanced</h3></a><span class=\"subtitle\" style=\"float:left\">image/tiff 35 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Schiaparelli hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The images were acquired in 1980 during early northern…</p></div> <!-- end description --></div>, <div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/syrtis_major_enhanced\"><img alt=\"Syrtis Major Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/55a0a1e2796313fdeafb17c35925e8ac_syrtis_major_enhanced.tif_thumb.png\"/></a><div class=\"description\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/syrtis_major_enhanced\"><h3>Syrtis Major Hemisphere Enhanced</h3></a><span class=\"subtitle\" style=\"float:left\">image/tiff 25 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Syrtis Major hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. This mosaic is composed of about 100 red and violet…</p></div> <!-- end description --></div>, <div class=\"item\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/valles_marineris_enhanced\"><img alt=\"Valles Marineris Hemisphere Enhanced thumbnail\" class=\"thumb\" src=\"/cache/images/4e59980c1c57f89c680c0e1ccabbeff1_valles_marineris_enhanced.tif_thumb.png\"/></a><div class=\"description\"><a class=\"itemLink product-item\" href=\"/search/map/Mars/Viking/valles_marineris_enhanced\"><h3>Valles Marineris Hemisphere Enhanced</h3></a><span class=\"subtitle\" style=\"float:left\">image/tiff 27 MB</span><span class=\"pubDate\" style=\"float:right\"></span><br/><p>Mosaic of the Valles Marineris hemisphere of Mars projected into point perspective, a view similar to that which one would see from a spacecraft. The distance is 2500 kilometers from the surface of…</p></div> <!-- end description --></div>]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "4"
+      ]
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "# With Chrome now open, browser navs and opens URL listed\n",
     "url = ' https://astrogeology.usgs.gov/search/results?q=hemisphere+enhanced&k1=target&v1=Mars'\n",
     "browser.visit(url)\n",
-    "time.sleep(10)\n",
+    "time.sleep(7)\n",
     "html = browser.html\n",
     "soup = BeautifulSoup(html, 'html.parser')\n",
     "\n",
     "#Show HTML for 4 items we are revieweing\n",
     "result = soup.find_all('div', class_ = \"item\") \n",
-    "print(result)"
+    "len(result)"
    ]
   },
   {
@@ -446,13 +457,12 @@
     "    \n",
     "    # Boilerplate scrape setup\n",
     "    browser.visit(full_url)\n",
-    "    time.sleep(10)\n",
+    "    time.sleep(7)\n",
     "    html = browser.html\n",
     "    url_soup = BeautifulSoup(html, 'html.parser')\n",
     "    full_img_url = url_soup.find(\"div\", class_ = \"downloads\") \n",
     "    result = full_img_url.select_one('ul li a')['href']\n",
-    "    print(result)\n",
-    "\n"
+    "    print(result)"
    ]
   }
  ],
